--- a/Gmean.Rmd
+++ b/Gmean.Rmd
@@ -74,18 +74,28 @@ In the following we will run some simulations to investigate the differnce of us
 ##ADC
 
 ```{r, adcsim, echo=FALSE}
-ADC1 <- 0.0005
-ADC2 <- 0.003
+ADC1 <- 0.0008
+ADC2 <- 0.0032
+D1 <- 0.0008
+D2 <- 0.0008
+Ds1 <- 0.01
+Ds2 <- 0.01
 S01 <- 1
 S02 <- 1
+S0b1 <- 1
+S0b2 <- 1
+f1 <- 0.50
+f2 <- 0.50
 b0 <- 0
 b1 <- 800
-params <- data.frame(ADC1, ADC2, S01, S02, b0, b1)
+params <- data.frame(ADC1, ADC2, S01, S02, b0, b1, D1, D2, Ds1, Ds2, S0b1, S0b2, f1, f2)
 
 adc1f <- function(x) ADC1
 adc2f <- function(x) ADC2
 sb1 <- function(x) S01*exp(-x*ADC1) # monoexponential curve 1
 sb2 <- function(x) S02*exp(-x*ADC2) # monoexponential curve 2
+bi1 <- function(x) S0b1*((1-f1)*exp(-x*D1)+f1*exp(-x*Ds1)) # biexponential curve 1
+bi2 <- function(x) S0b2*((1-f2)*exp(-x*D2)+f2*exp(-x*Ds2)) # biexponential curve 1
 sbf <- function(x) (S01*exp(-x*ADC1)+S02*exp(-x*ADC2))/2 # arithmetic average
 sbr <- function(x) sqrt(S01*exp(-x*ADC1)*S02*exp(-x*ADC2)) # geometric average
 adc_f_b1 <- function (x) (-log((S01*exp(-x*ADC1)+S02*exp(-x*ADC2))/2)+log((S01+S02)/2))/(x-b0) # adc calculated using the arithmetic mean vs upper b-vale
@@ -94,9 +104,12 @@ adc_f_rat <- function (x) ((-log((S01*exp(-b1*ADC1)+S02*exp(-b1*x*ADC1))/2)+log(
 adc_g_rat <- function (x) ((-log(S01*exp(-b1*ADC1))+log(S01))/(b1-b0) + (-log(S02*exp(-b1*x*ADC1))+log(S02))/(b1-b0))/2/((ADC1+x*ADC1)/2) # ratio of geom adc vs mean adc (always 1)
 adc_f_s0 <- function (x) (-log((S01*exp(-b1*ADC1)+x*S01*exp(-b1*ADC2))/2)+log((S01+x*S01)/2))/(b1-b0) # adc calculated using the arithmetic mean vs signal intensity
 adc_g_s0 <- function (x) ((-log(S01*exp(-b1*ADC1))+log(S01))/(b1-b0) + (-log(x*S01*exp(-b1*ADC2))+log(x*S01))/(b1-b0))/2 # adc calculated using the geometric mean vs signal intensity
+geom_bi_mono <- function (x) exp(0.5 * (log(S0b1*((1-f1)*exp(-x*D1)+f1*exp(-x*Ds1)))
+                                        +log(S02*exp(-x*ADC2)))) # geometric mean of monoexponential and biexponential function
+arith_bi_mono <-  function (x) (S0b1*((1-f1)*exp(-x*D1)+f1*exp(-x*Ds1)) + S02*exp(-x*ADC2))/2 # arithmetic mean of monoexponential and biexponential function
 ```
 
-Figure 1 demonstrates the results of taking the geometric vs. the arithmetic mean of two voxels with different diffusion coefficients as a function of the b-value. For this example a fast decaying signal with an ADC of $`r ADC2` \frac{mm^2}{10^3s}$ (approximating free diffusion in water) and a slow decaying signal with an ADC of $`r ADC1` \frac{mm^2}{10^3s}$ (approximating diffusion in tissue such as brain matter) was used. It is importoant to note that in die following plots the initial signal intensity was set to 1 for both voxels. Initial signal intensities also play an important role when averaging as will be shown later.
+Figure 1 demonstrates the results of taking the geometric vs. the arithmetic mean of two voxels with different diffusion coefficients as a function of the b-value. For this example a fast decaying signal with an ADC of $`r ADC2` \frac{mm^2}{s}$ (approximating free diffusion in water) and a slow decaying signal with an ADC of $`r ADC1` \frac{mm^2}{s}$ (approximating diffusion in tissue such as brain matter) was used. It is importoant to note that in die following plots the initial signal intensity was set to 1 for both voxels. Initial signal intensities also play an important role when averaging as will be shown later.
 
 
 ```{r, adcfig1, echo=FALSE, warning=FALSE, message=FALSE, results='asis', fig.height=6, fig.width=8, fig.cap="Average signal intensities using the arithmetic (red) and geometric (green) mean of two monoexponential functions (blue) as a function of the b-value. The Y-scale is logged and clearly demonstrates how the arithmetic mean does not follow a monoexponential decay"}
@@ -191,7 +204,7 @@ p +     layer (stat = "function",
 
 \newpage
 
-The extent to how much the ADC calculated with the arithmetic mean deviates from the actual mean ADC, also depends on the amount of the differenc between the initial monoexponential coefficients. This is demonstrated in figure 3, where the ratio of the calculated ADC vs. the actual mean ADC is plottet against the ratio of the two initial monoexponential ADCs. For figure 3 the initial signal intensities $S_0$ were set to 1, ADC1 was fixed to $`r ADC1` \frac{mm^2}{10^3s}$ and the upper b-value used to calculate the ADCs was set to $`r params$b1`$.
+The extent to how much the ADC calculated with the arithmetic mean deviates from the actual mean ADC, also depends on the amount of the differenc between the initial monoexponential coefficients. This is demonstrated in figure 3, where the ratio of the calculated ADC vs. the actual mean ADC is plottet against the ratio of the two initial monoexponential ADCs. For figure 3 the initial signal intensities $S_0$ were set to 1, ADC1 was fixed to $`r ADC1` \frac{mm^2}{3s}$ and the upper b-value used to calculate the ADCs was set to $`r params$b1`$.
 
 
 ```{r, adcfig3, echo=FALSE, warning=FALSE, message=FALSE, results='asis', fig.height=6, fig.width=8, fig.cap="ratio of the calculated ADC vs. the actual mean ADC is plottet against the ratio of the two initial monoexponential ADCs."}
@@ -225,6 +238,7 @@ Naturally, the two curves meet when both monoexponential $ADC$s have the same va
 \newpage
 
 Finally, we will observe the effect of the initial signal intensity on the calculated ADC values in figure 4.
+
 
 ```{r, adcfig4, echo=FALSE, warning=FALSE, message=FALSE, results='asis', fig.height=6, fig.width=8, fig.cap="ADC value calculated from the arithmetic (red) and geometric (green) mean as a function of the ratio of the initial signal intensities."}
 
@@ -268,4 +282,48 @@ p +     layer (stat = "function",
                                       "Geometric Mean",
                                       "ADC 1",
                                       "ADC 2"))
+```
+
+\newpage
+
+```{r, mono_bi, echo=FALSE, warning=FALSE, message=FALSE, results='asis', fig.height=6, fig.width=8, fig.cap="mono and biexponential curve"}
+
+p <- ggplot(data = params)
+p +     layer (stat = "function",
+           fun = bi1,
+           size = 1,
+           alpha = 0.8,
+           mapping = aes (color="bi1")
+           ) + 
+        layer (stat = "function",
+           fun = sb2,
+           size = 1,
+           alpha = 0.8,
+           mapping = aes (color="sb2")
+           ) + 
+        layer (stat = "function",
+           fun = arith_bi_mono,
+           size = 1,
+           alpha = 0.8,
+           mapping = aes (color="arith_bi_mono")
+           ) + 
+        layer (stat = "function",
+           fun = geom_bi_mono,
+           size = 1,
+           alpha = 0.8,
+           mapping = aes (color="geom_bi_mono")
+           ) + 
+        xlim(0,1000) +
+        scale_y_log10() +
+        xlab("b-value") + 
+        ylab("Signal Intensity") +
+        scale_color_manual(name = "Curves",
+                           values = c("midnightblue",
+                                      "midnightblue",
+                                      "indianred4",
+                                      "seagreen4"),
+                           labels = c("Bi1",
+                                      "Mono2",
+                                      "Arithmetic Mean",
+                                      "Geometric Mean"))
 ```
